2008-06-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimage.c: When pixel-size is specified, use
	GTK_ICON_LOOKUP_FORCE_SIZE when loading themed icons.

2008-06-15  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_get_filename): Return full 
	path here as expected, not just the basename.

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_update_current_folder): Ensure that we keep
	a reference to file, since it can be destroyed when switching back to
	browse mode.

	* gtk/gtkfilesystem.c (get_icon_for_special_directory): Removed, home
	and desktop directories are dealt by the filechooser as normal files,
	not volumes, so the icon for these is handled directly by GIO.
	(_gtk_file_system_volume_render_icon): Update caller.

2008-06-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrendererpixbuf.c: Add a gicon property.

2008-06-14  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkselection-win32.c (gdk_win32_selection_add_targets):

	Initialize hwnd to NULL.  This fixes OpenClipboard() failure and,
	according to MSDN docs, associates the open clipboard with the
	current task.  (#378158, reported by Andreas Köhler)

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.3 ===

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaccelgroup.c: Add some docs

	* gdk/gdkwindow.c: Fix doc typos

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilesystem.c: Avoid PLT entries by including
	gtkalias.h

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c:
	* gtk/gtkfilechooserdefault.c:
	* gtk/gtkfilechooserentry.c:
	* gtk/gtkfilesystem.c:
	* gtk/gtkfilesystem.h:
	* gtk/gtkfilesystemmodel.c:
	* gtk/gtkpathbar.c: Really make GtkFileSystem private
	by _-prefixing all functions.

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	* docs/RELEASE-HOWTO: Updates
	* INSTALL.in: Bump version
